WIP: Cleanup RFC8040 media type handling
// FIXME: add an explicit issue
// FIXME: add compatibility

Change-Id: Iaaf192e9d30858f5ce6f8e3484ea232fbf69e92f
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>